protocols/tests/adders/adder_d2/no_dontcare_conflict.out
error: Thread 1 attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d2/no_dontcare_conflict.prot:12:3
   │
12 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 attempted conflicting assignment to 'a': current=1, new=4

