protocols/tests/adders/adder_d2/no_dontcare_conflict.prot
// maps to a verilog design
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

// This protocol omits the DontCare assignments after fork.
// With implicit input re-application, this should cause a ConflictingAssignment
// error when the next pipelined transaction tries to assign different values.
prot add<DUT: Adder>(in a: u32, in b: u32, out s: u32) {
  DUT.a := a;
  DUT.b := b;

  step();
  fork();

  // NOT setting input pins to DontCare!
  // With implicit re-application, DUT.a and DUT.b will be re-applied
  // as their held values, causing conflict with next transaction.

  step();

  assert_eq(s, DUT.s);
  step();
}
